align thumbnails + fix image size

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -2972,7 +2972,6 @@ hr {
   margin-bottom: 30px; }
 
 .product-single__media-wrapper {
-  margin: 0 auto;
   width: 100%; }
 
 .product-single__media {
